fix: trival problems

--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,8 @@ The various components of your paper [title, text, heads, etc.] are already defi
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{content/introduction}
+
+\input{sections/introduction}
 
 
 \bibliographystyle{IEEEtran}
