--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,10 +1,12 @@
+\section{INTRODUCTION}
+
 Test introduction~\cite{Sethian1996}.
 
 \begin{table}[t]
     \centering
     \begin{tabular}{c|cccc}
         \toprule
-        \textit{\textbf{Object Goal}} & \textit{\textbf{Successful episodes}} & \textit{\textbf{SR}} & \textit{\textbf{Avg. number of actions}}   \\ \midrule
+        \textit{\textbf{Object Goal}} & \textit{\textbf{Successful episodes}} & \textit{\textbf{SR}} & \textit{\textbf{Avg. number of actions}} \\ \midrule
         Chair                         & 6/15                                  & 40\%                 & 30                                       \\
         Sofa                          & 6/15                                  & 40\%                 & 65                                       \\
         Table                         & 6/15                                  & 40\%                 & 42                                       \\
