--- a/main.tex
+++ b/main.tex
@@ -52,12 +52,23 @@
 
 % Useful packages
 \usepackage{cite}
+% \usepackage{subfig}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{multirow}
 \usepackage{booktabs}
-\usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage[colorlinks=true, allcolors=blue, hyperfootnotes=true]{hyperref}
+% \usepackage{tabularx} %This package must be placed after package {hyperref}, otherwise footnote marks are NOT treated as hyperlinks.
 \usepackage{utils/symbols}
+% \usepackage{tikz}
+% \usepackage{amssymb}
+\usepackage{amsmath}
+% \usepackage{algorithm}
+% \usepackage{algorithmicx}
+% \usepackage{algpseudocode}
+% \usepackage{mathtools}
+% \usepackage{caption}
+% \usepackage{placeins}
 
 
 \title{\LARGE \bf
