--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -45,6 +45,8 @@ be a radial basis function (RBF) kernel, which allows for smooth variations in t
 
 \begin{table}[t]
     \centering
+    \caption{Example of good table}
+    \label{tab:vlv}
     \begin{tabular}{c|cccc}
         \toprule
         \textit{\textbf{Object Goal}} & \textit{\textbf{Successful episodes}} & \textit{\textbf{SR}} & \textit{\textbf{Avg. number of actions}} \\ \midrule
@@ -54,6 +56,4 @@ be a radial basis function (RBF) kernel, which allows for smooth variations in t
         Bed                           & 3/15                                  & 20\%                 & 39                                       \\
         Toilet                        & 1/15                                  & 6,67\%               & 42                                       \\ \bottomrule
     \end{tabular}
-    \caption{Example of good table.}
-    \label{tab:vlv}
 \end{table}
