--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,7 @@
 \tcbuselibrary{breakable} % Support for spanning columns/pages
 % Define review comment annotation style
 \newcounter{reviewcounter} % Auto-numbering counter
-\newtcolorbox{reviewbox}[2][]{
+\newtcolorbox{revisebox}[2][]{
     breakable, % Support spanning columns
     colback=blue!5!white, % Background color
     colframe=blue!50!black, % Border color
@@ -94,8 +94,8 @@ ROS4VSN: Visual Semantic Navigation in Real Robots with ROS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
 
-This electronic document is a live template.
-The various components of your paper [title, text, heads, etc.] are already defined on the style sheet, as illustrated by the portions given in this document.
+    This electronic document is a live template.
+    The various components of your paper [title, text, heads, etc.] are already defined on the style sheet, as illustrated by the portions given in this document.
 
 \end{abstract}
 
