chore: update example

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -44,16 +44,18 @@ be a radial basis function (RBF) kernel, which allows for smooth variations in t
 
 
 \begin{table}[t]
+    \begin{revisebox}{2.1}
     \centering
     \caption{Example of good table}
     \label{tab:vlv}
     \begin{tabular}{c|cccc}
         \toprule
-        \textit{\textbf{Object Goal}} & \textit{\textbf{Successful episodes}} & \textit{\textbf{SR}} & \textit{\textbf{Avg. number of actions}} \\ \midrule
+        \textit{\textbf{Object Goal}} & \textit{\textbf{Successful}} & \textit{\textbf{SR}} & \textit{\textbf{Avg.}} \\ \midrule
         Chair                         & 6/15                                  & 40\%                 & 30                                       \\
         Sofa                          & 6/15                                  & 40\%                 & 65                                       \\
         Table                         & 6/15                                  & 40\%                 & 42                                       \\
         Bed                           & 3/15                                  & 20\%                 & 39                                       \\
         Toilet                        & 1/15                                  & 6,67\%               & 42                                       \\ \bottomrule
     \end{tabular}
+    \end{revisebox}
 \end{table}
