--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,5 +1,7 @@
 \section{INTRODUCTION}
 
+\subsection{\revise{3.1}{Background}}
+
 Hello Test introduction~ \cite{Sethian1996}.
 
 Therefore, \revise{3.1}{simple gradient ascent search for actor updates can be performed.}
